# LudumDare48

./: .gitignore  Cargo.toml
assets/prefabs/: alertable.ron  bucket.ron  bucket_alertable.ron  bucket_card.ron  card.ron  depth.ron  drill_alertable.ron  drill_card.ron  game_over.ron  pulley_alertable.ron  pulley_card.ron  robot.ron  robot_alertable.ron  robot_card.ron  shovel_alertable.ron  shovel_card.ron  title_view.ron
assets/sprites/: sheet.ron  sheet.xcf  tiles.ron  tiles.xcf
config/: display_config.ron
src/: assets.rs  captcha.rs  cards.rs  digging.rs  hole.rs  main.rs  prelude.rs  state.rs  widgets.rs
src/cards/: bucket.rs
