[package]
name = "digging_deeper"
version = "0.0.1"
authors = ["Seurimas <mtgathering2000@hotmail.com>", "BasicDays"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.3"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
